--- a/week1/index.html
+++ b/week1/index.html
@@ -11,6 +11,7 @@
 	<div class='container'>
 		<h1>UNDER CONSTRUCTION</h1>
 		<h4>We have a few quirks to fix , but we will have everything up and running in no time . Please comeback in a few hours</h4>
+		
 		<div class="box-container">
 			<div class="box">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -18,6 +19,7 @@
 				</svg>
 
 				<h2>Contact Us</h2>
+				
 				<p>For any question please send us a message to hello@gmail.com</p>
 			</div>
 			<div class="box">
@@ -37,5 +39,8 @@
 			</div>
 		</div>
 	</div>
+	<article style="color:white;">
+		<h1 style='color:white;'>Css is not cool</h1>
+	</article>
 </body>
 </html>
